--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ version = '1.0-SNAPSHOT'
 sourceSets{
     main {
         resources {
-            srcDirs = ['src/resources', 'src/resources/Kartenpaket/']
+            srcDirs = ['src/resources', 'src/resources/Kartenpaket/','src']
         }
     }
 }
